# ObjectFlow

./: LIBERO.md  SETUP.md  busy.py  pyproject.toml
experiments/robot/libero/: libero_object_metainfo.json  libero_requirements.txt  regenerate_libero_dataset.py
experiments/robot/libero/generate_dataset/: README.md  inspect_regenerated_libero_points.py  regenerate_libero_dataset.py  visualize_libero_pointflow_on_original_cloud.py  visualize_libero_pointflow_video.py
prismatic/models/: __init__.py  pri4r_head.py
prismatic/models/backbones/point/: pointmlp.py  pointnet.py
